test/errors/fuzzy_match_unqualified.lq
# Test: Fuzzy matching with unqualified names
# This file tests fuzzy matching when a local variable is misspelled
# Expected error: "Variable not in scope: my-functoin"
# Expected suggestion: "Did you mean: my-function?"

module test::errors::fuzzy_match_unqualified contains
  define transparent my-function as
    function x Natural returns Natural value
      x
    end

  # Deliberately misspell my-function as my-functoin
  define transparent test-typo as
    function x Natural returns Natural value
      my-functoin x
    end

  define transparent main as compute
    return (test-typo 5)
  end
end
